--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/han0110/loothunt",
-  "author": "han0110 <tinghan0110@gmail.com>",
   "contributors": [
+    "han0110 <tinghan0110@gmail.com>",
     "Xavier Lupin <xavierlupin0418@gmail.com>"
   ],
   "license": "MIT",
   "scripts": {
-    "lint": "solhint contracts/**/*.sol",
+    "dev": "next client",
+    "export": "next build client && next export client -o build",
+    "deploy": "gh-pages -d build -b gh-pages -t -m \":rocket: Deploy\"",
+    "lint:contract": "solhint contracts/**/*.sol",
     "compile": "truffle compile",
     "test": "bash scripts/test.sh",
     "flatten": "truffle-flattener"
@@ -20,23 +23,39 @@
     "@0x/contracts-protocol": "^2.2.3",
     "@0x/contracts-tokens": "^1.0.6",
     "@0x/contracts-utils": "^1.0.6",
-    "bip39": "^2.5.0",
+    "@zeit/next-sass": "^1.0.1",
+    "bignumber.js": "^8.0.2",
+    "classnames": "^2.2.6",
     "dotenv": "^6.2.0",
     "eth-sig-util": "^2.1.1",
-    "ethereumjs-wallet": "^0.6.3",
+    "mappy-breakpoints": "^0.2.3",
+    "next": "^7.0.2",
+    "next-images": "^1.0.4",
+    "node-sass": "^4.11.0",
+    "normalize.css": "^8.0.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-jazzicon": "^0.1.3",
     "truffle": "^5.0.2",
     "truffle-flattener": "^1.2.11",
     "web3": "1.0.0-beta.37"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.12.1",
-    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-import": "^2.15.0",
-    "eslint-plugin-jest": "^22.2.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.2.2",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
+    "eslint-plugin-react": "^7.12.4",
     "ganache-cli": "6.2.5",
+    "gh-pages": "^2.0.1",
     "jest": "^24.0.0",
     "jest-watch-typeahead": "^0.2.1",
     "solhint": "^2.0.0-alpha.3"
+  },
+  "resolutions": {
+    "terser": "3.14.1"
   }
 }
