--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,20 +12,13 @@
   "license": "MIT",
   "scripts": {
     "dev": "next client",
+    "build": "next build client",
+    "start": "next start client",
     "export": "next build client && next export client -o build",
     "deploy": "gh-pages -d build -b gh-pages -t -m \":rocket: Deploy\"",
-    "compile": "truffle compile",
-    "lint:js": "eslint client",
-    "lint:contract": "solhint contracts/**/*.sol",
-    "test:contract": "bash scripts/test.sh",
-    "flatten": "truffle-flattener"
+    "lint": "eslint client"
   },
   "dependencies": {
-    "@0x/contracts-interfaces": "^1.0.6",
-    "@0x/contracts-libs": "^1.0.6",
-    "@0x/contracts-protocol": "^2.2.3",
-    "@0x/contracts-tokens": "^1.0.6",
-    "@0x/contracts-utils": "^1.0.6",
     "@zeit/next-sass": "^1.0.1",
     "bignumber.js": "^8.0.2",
     "classnames": "^2.2.6",
@@ -39,8 +32,6 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-jazzicon": "^0.1.3",
-    "truffle": "^5.0.2",
-    "truffle-flattener": "^1.2.11",
     "web3": "1.0.0-beta.37"
   },
   "devDependencies": {
@@ -49,14 +40,9 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^22.2.2",
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-react": "^7.12.4",
-    "ganache-cli": "6.2.5",
-    "gh-pages": "^2.0.1",
-    "jest": "^24.0.0",
-    "jest-watch-typeahead": "^0.2.1",
-    "solhint": "^2.0.0-alpha.3"
+    "gh-pages": "^2.0.1"
   },
   "resolutions": {
     "terser": "3.14.1"
